fix(interop): handle optional requirement metadata without losing content
Preserve nullable status and version metadata in snapshot fingerprints.
Require readable current-version content for snapshot/export/apply rather
than dereferencing null or fabricating empty text. Omit unknown OSLC
modification timestamps and do not advertise /versions/null links.

Add ten behavior regressions including unchanged valid fingerprints,
query paging and no mutation when content is unavailable. Red and focused
green stages passed in run 34832631143; full clean verification remains
in that run and canonical CI is required on this published head.

Retain the complete physical relocation ancestry from #628 and #1064.